<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="net.mEmoZz.FastingReminder.ui.activities.MainScreen">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center|top"
      android:contentDescription="@null"
      android:scaleType="center"
      android:src="@drawable/logo_moon"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="14dp"
      android:gravity="center"
      android:text="@string/app_name"
      android:textColor="@color/white"
      android:textSize="28sp"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="4dp"
      android:text="@string/app_description"
      android:textColor="@color/transWhite"
      android:textSize="16sp"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="18dp"
      android:gravity="center"
      android:padding="12dp"
      android:text="@string/enable_reminder"
      android:textColor="@color/white"
      android:textSize="18sp"/>

  <android.support.v7.widget.SwitchCompat
      android:id="@+id/enableService"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:paddingBottom="12dp"
      android:paddingLeft="80dp"
      android:paddingRight="80dp"
      android:paddingTop="12dp"
      android:textColor="@color/transWhite"/>

  <TextView
      android:id="@+id/btnSettings"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:layout_marginTop="22dp"
      android:background="@drawable/button_bg"
      android:gravity="center"
      android:padding="12dp"
      android:text="@string/btn_settings"
      android:textColor="@color/white"
      android:textSize="18sp"/>
</LinearLayout>
